# ckanext-copo-schema

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
ckanext/copo_schema/: cli.py  helpers.py  plugin.py  read.yaml  views.py
ckanext/copo_schema/assets/: script.js  webassets.yml
ckanext/copo_schema/assets/css/: copo_schema.css
ckanext/copo_schema/logic/: action.py  auth.py  schema.py  validators.py
ckanext/copo_schema/public/: copo_schema.css
ckanext/copo_schema/templates/: base.html  header.html
ckanext/copo_schema/templates/package/snippets/: additional_info.html
ckanext/copo_schema/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/copo_schema/tests/logic/: test_action.py  test_auth.py  test_validators.py
