[metadata]
name = ckanext-copo-schema
version = 0.0.2
description = COPO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/collaborative-open-plant-omics/ckanext-copo-schema
author = EI
author_email = ei.copo@earlham.ac.uk
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN COPO

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             copo_schema = ckanext.copo_schema.plugin:CopoSchemaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/copo_schema/i18n/ckanext-copo_schema.pot
width = 80

[init_catalog]
domain = ckanext-copo_schema
input_file = ckanext/copo_schema/i18n/ckanext-copo_schema.pot
output_dir = ckanext/copo_schema/i18n

[update_catalog]
domain = ckanext-copo_schema
input_file = ckanext/copo_schema/i18n/ckanext-copo_schema.pot
output_dir = ckanext/copo_schema/i18n
previous = true

[compile_catalog]
domain = ckanext-copo_schema
directory = ckanext/copo_schema/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
